2007-01-08  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py: added
	fallback to curl if wget is unavailable (bug #301259, based on a patch
	by Joshua Hoblitt)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: adds support for a "subdir" attribute
	for GIT branches (bug #342846, patch by Eric Anholt)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: abort on conflicts from svn update
	(bug #394308)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: always use a branch when it is
	specified (even when module is set) (bug #394588)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: use libgsf 1.14.2 (bug #362223)

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* modulesets/gnome-2.16.modules: Use gnome-2-16 branch for
	libbonoboui.

2007-01-09  Guillaume Desmottes  <cass@skynet.be>

	* doc/jhbuild.xml: Documentation: Correct spelling of Gnome as GNOME.

2007-01-09  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.18.modules: Specify a virtual gnomemm repository, 
	and specify the gnomemm modules as using the repository. Unlike before, 
	with cvs, they will then be checked out to top-level directories.

2007-01-08  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: vino depends on dbus-glib

2007-01-08  Murray Cumming  <murrayc@murrayc.com>

	* sample.jhbuildrc: Update for the GNOME cvs->svn change.

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/mesa.py: introduced special module type for mesa;
	necessary to use xorg moduleset (bug #349343, module by Eric Anholt)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/pulseaudio.modules: added PulseAudio moduleset
	(bug #348572)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: removed obsolete libbonobouimm from