@@ -1,3 +1,8 @@
+2007-01-10  Marco Pesenti Gritti <marco@gnome.org>
+
+	* jhbuild/modtypes/autotools.py: added a makefile attribute to the
+	autotools module type (bug #386193)
+
 2007-01-08  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py: added
